--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.6.3
 certifi==2018.8.24
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.1
 djangorestframework==3.8.2
 gunicorn==19.9.0
