--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2018.8.24
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1
+django-cors-headers==3.0.2
 djangorestframework==3.8.2
 gunicorn==19.9.0
 idna==2.7
